--- a/css/style.css
+++ b/css/style.css
@@ -1,692 +1,404 @@
-/* 01. Basic Styles
- *  * =================================================================== */
-@font-face {
-  font-family: 'Yeezy';
-  src: url("../fonts/yeezy_tstar-regular-webfont.ttf");
-  src: url("../fonts/yeezy_tstar-regular-webfont.woff") format("woff");
-  font-weight: normal; }
-@font-face {
-  font-family: 'Yeezy';
-  src: url("../fonts/yeezy_tstar-bold-webfont.ttf");
-  src: url("../fonts/yeezy_tstar-bold-webfont.woff") format("woff");
-  font-weight: bold; }
-@font-face {
-  font-family: 'Yeezy';
-  src: url("../fonts/yeezy_tstar-heavy-webfont.ttf");
-  src: url("../fonts/yeezy_tstar-heavy-webfont.woff") format("woff");
-  font-weight: bolder; }
-@font-face {
-  font-family: 'Yeezy';
-  src: url("../fonts/yeezy_tstar-light-webfont.ttf");
-  src: url("../fonts/yeezy_tstar-light-webfont.woff") format("woff");
-  font-weight: lighter; }
-* {
-  margin: 0; }
-
-
- html {
-    overflow-x: hidden;
-    height: 100%;
-    width: 100%;
- }
- body {
-    /*font-family: 'Source Sans Pro', sans-serif;*/
-    font-family: 'Yeezy';
-    background:  black;
- }
-
- h1 {
-    font-weight: bold;
- }
-
- h2 {
- }
-
- h5 {
-    font-weight: 600;
- }
-
- a {
-    cursor: pointer;
-    color: #9bddff;
-    text-decoration: none;
- }
-
- a:hover {
-    text-decoration:none;
-    color: #9bddff;
-    opacity: 0.9;
- }
-
- hr {
-    border-top: 5px solid #9bddff;
-    width: 80px;
-    padding-bottom: 20px;
-    text-align: center;
-    float: center;
-    margin: auto;
- }
-
- .colour-splash {
-    color: #9bddff;
- }
-
-/* 02. Intro
- *  * =================================================================== */
-
- .section-intro {
-    background: black no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    width: 100%;
-    height: 66vh;
-    margin-top: 0;
-    margin-bottom: 0vh;
-    position: relative;
-    text-align: center;
-    color: white;
-    display: table;
+/* Global Styles */
+body {
+  font-family: 'Darker Grotesque', sans-serif;
+  margin: 0;
+  padding: 0;
+  color: #000;
+  line-height: 1.6;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 24px;
 }
 
-.section-intro h1 {
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-
- .section-picture {
-    background: black no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    width: 100%;
-    height: auto;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
-    position: relative;
-    text-align: center;
-    color: white;
-    display: table;
-}
-
-.section-picture h1 {
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
- .outro {
-    background: black no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    width: 100%;
-    height: 10px;
-    position: relative;
-    text-align: center;
-    color: white;
-    display:table;
- }
-
-
-
-/*.wrapper{display:block; background-color:black; position:relative; width:100%; margin:0; padding:0px; overflow: hidden; text-align:left; word-wrap:break-word;}*/
-
-
-.header {
-  background-color: black;
-  overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
-.header a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 25px 45px 25px 45px;
-  text-decoration: none;
-  font-size: 14px;
-  line-height: 25px;
-  border-radius: 4px;
-}
-
-.header a.logo {
-  padding: 0px;
-}
-
-/* Change the color of links on hover */
-.header a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.header-right {
-  float: right;
-}
-
-@media screen and (max-width: 800px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .header-right {
-    float: none;
-    display: flex;
-  }
-}
-
-
-
-/* Form Tools */
-
-::-webkit-input-placeholder {
-   color: #9bddff;
-}
-
-:-moz-placeholder { /* Firefox 18- */
-   color: #9bddff;  
-}
-
-::-moz-placeholder {  /* Firefox 19+ */
-   color: #9bddff;  
-}
-
-:-ms-input-placeholder {  
-   color: #9bddff;  
-}
-
-form {
-  padding: 5px;
-  background: black;
-  display: grid;
-  color: white;
-  text-align: left;
-}
-
-form input {
-  border: none;
-  background: transparent;
-  border-bottom: 1px solid #9bddff;
-  outline: none;
-  font-size: 18px;
-  text-align: left;
-}
-
-form button {
-  background: black;
-  border: 14;
-  border-color: #9bddff;
-  color: white;
-
-}
-
-
-/* Rows
---------------------------------------------------------------------------------------------------------------- */
-.row0, .row0 a{}
-.row1{padding:80px 0 0 0;}
-.row2, .row2 a{}
-.row3, .row3 a{}
-.row4, .row4 a{}
-.row5, .row5 a{}
-
-/* Max Wrapper Width - Laptop, Desktop etc.
---------------------------------------------------------------------------------------------------------------- */
-@media screen and (min-width:1140px){
-    .hoc{max-width:1140px;}
-}
-
-@media screen and (min-width:978px) and (max-width:1140px){
-    .hoc{max-width:95%;}
-}
-
-
-
-.hoc{display:block; margin:0 auto;}
-
-
-.clear, .group{display:block;}
-.clear::before, .clear::after, .group::before, .group::after{display:table; content:"";}
-.clear, .clear::after, .group, .group::after{clear:both;}
-
-a{outline:none; text-decoration:none;}
-
-.fl_left, .imgl{float:left;}
-.fl_right, .imgr{float:right;}
-
-img{width:auto; max-width:100%; height:auto; margin:0; padding:0; border:none; line-height:normal; vertical-align:middle;}
-.imgl{margin:0 15px 10px 0; clear:left;}
-.imgr{margin:0 0 10px 15px; clear:right;}
-.imgover{display:inline-block; position:relative; max-width:100%;}
-.imgover::before, .imgover::after{display:block; position:absolute; content:""; text-align:center; opacity:0;}
-.imgover::before{top:0; right:0; bottom:0; left:0;}
-.imgover::after{top:50%; left:50%; width:50px; height:50px; line-height:50px; margin:-25px 0 0 -25px; font-family:"Font Awesome\ 5 Free"; font-weight:900; content:"\f067";/* fa-plus */ font-size:28px;}
-.imgover:hover::before, .imgover:hover::after{opacity:1;}
-
-.col-md-12 {
-    top: 30%;
-}
-.intro {
-    background:  black;
-    vertical-align: middle;
-    text-align: left;
-    height: 100vh;
-    position: relative;
-}
-
-.bottom {
-    position: absolute;
-    left: 50%;
-    bottom: 20%;
-}
-
-
-.intro .row {
-    margin-right: 0;
-    margin-left:0;
-}
-
-.intro h1 {
-    font-size: 84px;
-}
-
-.intro h2 {
-    font-size: 50px;
-}
-
-.intro h5 {
-    color: #9bddff;
-    font-size: 2.3rem;
-    margin-bottom: 0;
-    text-transform: uppercase;
-    letter-spacing: .3rem;
-    text-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
-}
-
-
-.picture {
-    float:center;
-    display:inline-block;
-    background:  black;
-    vertical-align: text-top;
-    position:relative;
-    width:40%; 
-    margin-left:14px; 
-    margin-right:14px;
-    text-align:center; 
-    word-wrap:break-word;
-}
-
-.picture .row {
-    margin-right: 0;
-    margin-left: 0;
-}
-
-
-.picture p {
-    font-size: 20px;
-    color: white;
-    text-align: left;
-}
-
-
-.picture h2 {
-    font-size: 40px;
-    color: white;
-}
-
-
-.picture h5 {
-    font-size: 2rem;
-    margin-bottom: 0;
-    text-transform: uppercase;
-    letter-spacing: .3rem;
-    text-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
-}
-
-
-@media screen or (max-width: 800px) {
-  .picture {
-  width: 90%;
-  display: block; /* Stops it from floating */
-  margin: auto; /* Ensures that it is centered */
-  margin-bottom: 25px; /* Space between the stacked elements */
-  }
- 
-}
-
-
-/* Create two equal columns that floats next to each other */
-.column {
-  float: center;
-  width: 100%;
-  padding: 10px;
-  position: relative;
-}
-
-
-
-.column h2 {
-    font-size: 40px;
-    color: #9bddff;
-}
-
-.column h5 {
-    font-size: 2rem;
-    margin-bottom: 0;
-    text-transform: uppercase;
-    letter-spacing: .3rem;
-    text-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
-}
-
-
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 800px) {
-  .column {
-    width: 100%;
-  }
-
-  .col-md-12 {
-    top: 0%;
-  }
-
-  .bottom {
-    display: none;
-  }
-
-  .intro{
-    height: 69vh;
-  }
-}
-
-
-
-
-.dark {
-    background: #000;
-}
-
-
-/* 03. Social Icons
- *  * =================================================================== */
-
-.social {
-  margin: 0 10px;
-  padding-top: 1.3em;
-  padding-bottom: 3em;
-  text-align: center;
-  color: black;
-  font-size: 0.9em;
-}
-
-.social a {
-  color: white;
-  text-decoration:none;
-  padding: 2em;
-}
-
-.social a:hover{
-  opacity: 0.6;
-}
-
-.social-footer {
-    position: block;
-    padding: 15px;
-}
-
-.social-footer a {
-    color: white;
-    text-decoration: none;
-    padding: 0.6em;
-    font-size: 1.7em;
-}
-
-
-
-
-
-/* 04. Icon Font
- *  * =================================================================== */
-
- .lnr {
-    font-size: 4em !important;
-    color:#fff;
- }
-
-/* 05. Section Styles
- *  * =================================================================== */
-
-section {
-    padding-bottom: 1px;
-}
-
-.profilepic {
-    height: 400px;
-    width: auto;
-    border-radius: 500px;
-    object-fit: cover;
-}
-
-.section-primary p {
-    text-align: left;
-    color: #D3D3D3;
-}
-
-.section-primary {
-    border: #9bddff;
-}
-
-.section-colour {
-    background-color: #000;
-    color: #000;
-}
-
-.section-colour p {
-    text-align: left;
-    color: #D3D3D3;
-}
-
-.section-heading .lead {
-    text-align: left;
-}
-
-.column .lead {
-    text-align: left;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-.section-heading h2 {
-    text-align: center;
-}
-
-.section-heading h3 {
-    text-align: left;
-}
-
-.section-heading h4 {
-    text-align: center;
-    color: #D3D3D3
-}
-
-.section-heading p, li {
-    text-align: left;
-    color: #D3D3D3;
-} 
-
-.section-colour {
-    border: #fff;
-}
-
-.section-colour hr {
-    border-top: 5px solid #fff;
- }
-
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-}
-
-.img-wrapper {
-  position: relative;
-  overflow: hidden;
-}
-
-.img-wrapper > img {
-  display: block;
-  width: 100%;
-  aspect-ratio: 1 / 1;
-  object-fit: cover;
-  object-position: center;
-}
-
-.img-wrapper > .content {
-  position: absolute;
-  inset: 0;
-  font-size: 2rem;
-  padding: 1rem;
-  background: rgba(255, 255, 255, .4);
+/* Header Styles */
+header {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  max-width: 1200px;
+  vertical-align: middle;
+  margin: 0 auto;
+}
+
+.logo img {
+  height: 40px;
+  vertical-align: middle;
+}
+
+nav ul {
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  margin-left: 20px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #000;
+  font-weight: 500;
+  font-size: 24px;
+  padding: 10px 15px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+nav ul li a:hover, nav ul li a.cta {
+  background-color: #003366;
+  color: white;
+}
+
+/* Main Content Styles */
+main {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+/* Hero Section Styles */
+#hero {
+  text-align: center;
+  margin-bottom: 60px;
+}
+
+#hero h1 {
+  font-size: 80px;
+  margin-bottom: 20px;
+  font-weight: 600;
+}
+
+#hero p {
+  font-size: 36px;
+  margin-bottom: 30px;
+}
+
+.highlight {
+  color: #0066cc;
+}
+
+.hero-image {
+  background-color: #f0f0f0;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.placeholder-image {
+  max-width: 80%; /* Make the image container smaller */
+  margin: 10px auto 0; /* Center the image and add space above */
+}
+
+.placeholder-image img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+  border-radius: 5px; /* Slight rounding of corners */
+}
+
+.hero-cta {
+  margin-top: 10px;
+}
+
+.hero-cta .cta-button {
+  display: inline-block;
+  background-color: #003366;
+  color: white;
+  text-decoration: none;
+  padding: 10px 15px;
+  font-size: 24px;
+  font-weight: 500;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.hero-cta .cta-button:hover {
+  background-color: #004d99;
+}
+
+/* Row Section Styles */
+.row {
+  display: flex;
+  align-items: stretch;
+  margin-bottom: 40px;
+  border-top: 1px solid #e0e0e0;
+  padding-top: 40px;
+  position: relative;
+}
+
+.section-number {
+  font-size: 25px;
+  color: #000;
+  position: absolute;
+  top: 0px;
+  left: 0;
+}
+
+.section-title {
+  width: 25%;
+  background-color: #f5f1e9;
+  padding: 20px;
+  border-radius: 10px;
+  margin-right: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: top;
+}
+
+.section-content {
+  width: 70%;
+  background-color: #fff;
+  border: 1px solid #e0e0e0;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.section-title h3 {
+  font-size: 40px;
+  margin: 0;
+  font-weight: 600;
+}
+
+.section-content h4 {
+  font-size: 32px;
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-weight: 500;
+}
+
+.section-content p {
+  font-size: 26px;
+  color: #333;
+}
+
+/* FAQ Section Styles */
+#faq {
+  background-color: #003366;
+  color: white;
+  padding: 60px 0;
+  margin: 60px 0;
+  position: relative;
+}
+
+#faq::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -50vw;
+  right: -50vw;
+  bottom: 0;
+  background-color: #003366;
+  z-index: -1;
+}
+
+.faq-content {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+#faq h2 {
+  margin-bottom: 30px;
+  font-size: 40px;
+  font-weight: 600;
+}
+
+.faq-item {
+  margin-bottom: 20px;
+}
+
+.faq-question {
+  font-size: 30px;
+  font-weight: 500;
+  cursor: pointer;
+  padding: 15px;
+  background-color: #004080;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
-.img-wrapper > img,
-.img-wrapper > .content {
-  transition: 200ms ease-in-out;
+.faq-question:hover {
+  background-color: #004d99;
 }
 
-.img-wrapper:hover > img.blur {
-  filter: blur(5px);
+.faq-question i {
+  transition: transform 0.3s ease;
 }
 
-.img-wrapper:hover > img.gray {
-  filter: grayscale(1);
+.faq-question.active i {
+  transform: rotate(180deg);
 }
 
-.img-wrapper:hover > img.zoom {
-  transform: scale(1.1);
+.faq-answer {
+  display: none;
+  padding: 15px;
+  font-size: 24px;
+  background-color: #004d99;
+  border-radius: 0 0 5px 5px;
 }
 
-.img-wrapper > .content.fade {
+/* Get Early Access Section Styles */
+#get-access {
+  margin-top: 60px;
+  text-align: left;
+  border: 1px solid #e0e0e0;
+  padding: 40px;
+  border-radius: 10px;
+}
+
+#get-access h2 {
+  font-size: 46px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+#get-access p {
+  font-size: 30px;
+  margin-bottom: 30px;
+}
+
+form {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-left {
+  width: 65%;
+}
+
+.form-right {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"] {
+  width: 100%;
+  padding: 15px;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  font-size: 24px;
+  background-color: transparent;
+  margin-bottom: 20px;
+}
+
+.consent-text {
+  font-size: 32px;
+  margin-bottom: 10px;
+}
+
+.consent-note {
+  font-size: 18px;
+  color: #666;
+  margin-bottom: 10px;
+}
+
+.toggle {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  margin-right: 15px;
+}
+
+.toggle input {
   opacity: 0;
-}
-.img-wrapper:hover > .content.fade {
-  opacity: 1;
-}
-
-.img-wrapper > .content.slide-left {
-  transform: translateX(-100%);
-}
-.img-wrapper:hover > .content.slide-left {
-  transform: translateX(0);
+  width: 0;
+  height: 0;
 }
 
-.img-wrapper > .content.slide-right {
-  transform: translateX(100%);
-}
-.img-wrapper:hover > .content.slide-right {
-  transform: translateX(0);
-}
-
-.img-wrapper > .content.slide-down {
-  transform: translateY(-100%);
-}
-.img-wrapper:hover > .content.slide-down {
-  transform: translateY(0);
-}
-
-.img-wrapper > .content.slide-up {
-  transform: translateY(100%);
-}
-.img-wrapper:hover > .content.slide-up {
-  transform: translateY(0);
-}
-
-
-
-
-.arrow,
-.arrow:before {
+.slider {
   position: absolute;
-  bottom: 0px;
-  left: 50%; }
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: .4s;
+  border-radius: 34px;
+  border: 2px solid #666;
+}
 
-.arrow {
-  width: 40px;
-  height: 40px;
-  top: 50%;
-  margin: -20px 0 0 -20px;
-  -webkit-transform: rotate(45deg);
-  border-left: none;
-  border-top: none;
-  border-right: 2px #fff solid;
-  border-bottom: 2px #fff solid; }
-
-.arrow:before {
-  content: '';
-  width: 20px;
-  height: 20px;
-  top: 50%;
-  margin: -10px 0 0 -10px;
-  border-left: none;
-  border-top: none;
-  border-right: 1px #fff solid;
-  border-bottom: 1px #fff solid;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-name: arrow; }
-
-@keyframes arrow {
-  0% {
-    opacity: 1; }
-  100% {
-    opacity: 0;
-    transform: translate(-10px, -10px); } }
-  
-.loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 2px;
+  background-color: white;
+  transition: .4s;
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
 }
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+input:checked + .slider {
+  background-color: #0066cc;
 }
 
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
 
-/* 05. Footer
- *  * =================================================================== */
+button[type="submit"] {
+  width: 100%;
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #000;
+  padding: 15px 25px;
+  font-size: 26px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
 
+button[type="submit"]:hover {
+  background-color: #000;
+  color: #fff;
+}
+
+/* Footer Styles */
 footer {
-    display: block;
-    position: static;
-    bottom: 0;
-    background-color: black;
-    color: #fff;
-    padding: 50px 0;
-
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px;
+  margin-top: 60px;
+  border-top: 1px solid #e0e0e0;
 }
 
-footer p {
-    padding: 15px;
-    opacity: 0.8;
+footer img {
+  height: 40px;
 }
 
+.social a {
+  color: #0066cc;
+  font-size: 24px;
+  transition: color 0.3s ease;
+}
 
+.social a:hover {
+  color: #004d99;
+}
 
+/* Responsive Styles */
+@media (max-width: 768px) {
+  .row, form {
+    flex-direction: column;
+  }
 
-
+  .section-title, .section-content, .form-left, .form-right {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+}
